--- a/src/css/components/_UndoRedo.css
+++ b/src/css/components/_UndoRedo.css
@@ -3,11 +3,14 @@
   button {
     @mixin button gray;
     lost-column: 1/2 0 0.5em;
+    font-size: 1.2em;
   }
   .undo-redo__icon--undo {
     @mixin icon undo;
+    display: block;
   }
   .undo-redo__icon--redo {
     @mixin icon repeat;
+    display: block;
   }
 }
