--- a/src/css/layout/_queries.css
+++ b/src/css/layout/_queries.css
@@ -13,3 +13,45 @@
     }
   }
 }
+
+@media only screen and (max-width: 730px) {
+  .app__central-container {
+    .col-1-4 {
+      &.left {
+        lost-column: none;
+        .app__copycss-button {
+          padding: 4px !important;
+        }
+        .palette-grid {
+          margin: 0;
+        }
+      }
+      &.right {
+        lost-column: none;
+      }
+    }
+    .col-2-4 {
+      &.center {
+        lost-column: none;
+        .pixel-grid {
+          margin: 2em auto;
+          width: 100%;
+        }
+      }
+    }
+  }
+
+  .app__mobile--container {
+    lost-utility: clearfix;
+    .app__mobile--group {
+      lost-column: 1/2;
+    }
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  button,
+  .dimensions {
+    font-size: 0.8em !important;
+  }
+}
