--- a/src/css/components/_App.css
+++ b/src/css/components/_App.css
@@ -4,6 +4,10 @@
     lost-utility: clearfix;
   }
 
+  .app__main {
+    margin-bottom: 2em;
+  }
+
   .app__frames-container {
     margin-bottom: 1em;
   }
