--- a/src/css/components/_Modal.css
+++ b/src/css/components/_Modal.css
@@ -2,8 +2,18 @@
   button.close {
     @mixin button blue;
   }
-  .modal__preview--wrapper {
-    margin: 1em auto;
-    display: table;
+  .modal__preview {
+    margin: 2em 0 1em;
+    .modal__preview--wrapper {
+      margin: 1em auto;
+      display: table;
+    }
+    fieldset {
+      padding: 1em 0;
+      label {
+        margin: 1em 0.5em;
+        display: inline-block;
+      }
+    }
   }
 }
