--- a/src/css/layout/_queries.css
+++ b/src/css/layout/_queries.css
@@ -47,6 +47,10 @@
       lost-column: 1/2;
     }
   }
+
+  body {
+    width: 100% !important;
+  }
 }
 
 @media only screen and (max-width: 360px) {
