--- a/src/css/components/_LoadDrawing.css
+++ b/src/css/components/_LoadDrawing.css
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    text-align: center;
     &.empty {
       overflow-y: hidden;
       display: block;
