--- a/src/css/components/_CopyCss.css
+++ b/src/css/components/_CopyCss.css
@@ -1,9 +1,13 @@
 .copy-css {
   h2 {
-    padding: 2em 0;
+    padding: 2em 0 1em;
+    margin-bottom: 0;
     font-size: 1em;
     display: block;
     text-align: center;
+    span {
+      color: $color-tamarillo;
+    }
   }
   .copy-css__string {
     overflow-y: scroll;
