--- a/src/css/layout/_queries.css
+++ b/src/css/layout/_queries.css
@@ -44,9 +44,9 @@
     .col-2-4 {
       &.center {
         lost-column: none;
-        .pixel-grid {
-          margin: 2em auto;
-          width: 100%;
+        .grid-container {
+          width: 90% !important;
+          margin: 1em auto !important;
         }
       }
     }
@@ -65,11 +65,6 @@
 
   .app__copycss-button {
     margin-top: 1.4em !important;
-  }
-
-  .grid-container {
-    width: 100% !important;
-    margin: 1em 0 !important;
   }
 
   body {
