--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -1,5 +1,6 @@
 $font-pixel: 'minecraftiaregular', 'Helvetica Neue Light', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 $font-icons: 'FontAwesome';
+$font-monospace: 'monospace';
 
 $color-scorpion: #585858;
 $color-boulder: #757575;
