--- a/src/css/components/_App.css
+++ b/src/css/components/_App.css
@@ -78,12 +78,17 @@
     text-align: center;
     margin: 1em 0 0.6em;
     > div {
-      > div {
+      button {
         font-size: 1.8em;
         text-align: center;
         color: $color-mineShaft;
         padding: 0.4em 0;
         width: 100%;
+        border: none;
+        background-color: transparent;
+        &:focus {
+          outline: 0;
+        }
         &.selected {
           color: $color-silver;
           background-color: $color-mineShaft;
