--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -15,6 +15,13 @@ html
     link(rel='icon' type='image/png' href='regular-icon.png' sizes='192x192')
     link(rel='shortcut icon', href='favicon.ico', type='image/x-icon')
     link(rel='stylesheet', href='./css/main.css')
+    script.
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', '!{googleAnalyticsId}', 'auto');
+        ga('send', 'pageview');
   body
   header
     .col-2-3
@@ -32,10 +39,3 @@ html
       window.__INITIAL_STATE__ = !{initialState}
   div(id='app') !{reactOutput}
   script(src='bundle.js')
-  script.
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-72177072-1', 'auto');
-      ga('send', 'pageview');
