--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -1,5 +1,5 @@
 $font-pixel: 'minecraftiaregular', 'Helvetica Neue Light', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
-$font-icons: 'FontAwesome';
+$font-icons: 'WebFontIcons';
 $font-monospace: 'monospace';
 
 $color-scorpion: #585858;
