--- a/src/css/input/_inputText.css
+++ b/src/css/input/_inputText.css
@@ -17,3 +17,13 @@ input[type="number"] {
     outline: none;
   }
 }
+
+input[type=number] {
+  -moz-appearance: textfield;
+
+  &::-webkit-outer-spin-button,
+  &::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+}
