--- a/src/css/input/_inputText.css
+++ b/src/css/input/_inputText.css
@@ -1,5 +1,9 @@
-input[type="text"],
-input[type="number"] {
+input[type='number'] {
+  -moz-appearance: textfield;
+}
+
+input[type='text'],
+input[type='number'] {
   appearance: none;
   box-shadow: none;
   border-radius: none;
@@ -11,19 +15,15 @@ input[type="number"] {
   background-color: $color-tundora;
   transition: background-color 0.3s;
 
-  &:focus {
-    color: $color-mineShaft;
-    background-color: $color-dustyGray;
-    outline: none;
-  }
-}
-
-input[type=number] {
-  -moz-appearance: textfield;
-
   &::-webkit-outer-spin-button,
   &::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
+  }
+
+  &:focus {
+    color: $color-mineShaft;
+    background-color: $color-dustyGray;
+    outline: none;
   }
 }
